feat: add pages, articles, api

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,10 @@
 	"parserOptions": {
 		"ecmaVersion": "latest",
 		"sourceType": "module",
-		"project": "./tsconfig.json"
+		"project": "./tsconfig.json",
+		"extraFileExtensions": [
+			".vue"
+		]
 	},
 	"plugins": [
 		"@typescript-eslint"
