--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/tailwindcss": "^6.8.0",
-    "@sidebase/nuxt-auth": "0.6.0-beta.5",
+    "@sidebase/nuxt-auth": "0.5.0",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/uuid": "^9.0.3",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "daisyui": "^3.7.3",
@@ -29,6 +30,7 @@
     "next-auth": "4.21.1",
     "openai": "^4.6.0",
     "trpc-nuxt": "^0.10.12",
+    "uuid": "^9.0.0",
     "zod": "^3.22.2"
   }
 }
