--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-app",
-  "private": true,
+  "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -13,6 +13,7 @@
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@sidebase/nuxt-auth": "0.5.0",
+    "@tailvue/nuxt": "^1.0.0",
     "@tailwindcss/typography": "^0.5.10",
     "@types/uuid": "^9.0.3",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
@@ -29,6 +30,7 @@
     "dotenv": "^16.3.1",
     "next-auth": "4.21.1",
     "openai": "^4.6.0",
+    "tailvue": "^1.0.0",
     "trpc-nuxt": "^0.10.12",
     "uuid": "^9.0.0",
     "zod": "^3.22.2"
