feat: add name, upload articles & doctors, clean up site

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "openai": "^4.6.0",
     "tailvue": "^1.0.0",
     "trpc-nuxt": "^0.10.12",
+    "trpc-openapi": "^1.2.0",
     "uuid": "^9.0.0",
     "zod": "^3.22.2"
   }
